(fix) connect modal window z-index issues

--- a/src/styles/layout.scss
+++ b/src/styles/layout.scss
@@ -1,7 +1,7 @@
 .ant-layout {
   background-color: transparent;
   position: relative;
-  z-index: 50;
+  z-index: 10;
 }
 
 .ant-layout-content {
